# russian-loto

./: .gitignore  README.md  generate.py  main.py  pyproject.toml  recover_registry.py  registry.py  render.py  render_stl.py  test_card.py  test_registry.py  test_render_stl.py
scripts/: generate_box.py
src/russian_loto/: __init__.py  card.py  card_geometry.py  cli.py  constants.py  registry.py  render.py  render_stl.py  serve.py
src/russian_loto/templates/: game.html
src/russian_loto/web/: __init__.py  payload.py  server.py  state_store.py
src/russian_loto/web/static/css/: base.css  display.css  game.css
src/russian_loto/web/static/js/: display-ui.js  logic.js  main-display.js  main-game.js  state.js  ui.js
src/russian_loto/web/templates/: display.html  game.html
tests/: conftest.py  test_card.py  test_cli_helpers.py  test_cli_reprint.py  test_generate_box.py  test_logic_js.py  test_registry.py  test_render_pdf.py  test_render_stl.py  test_serve.py  test_sse_display.py  test_state_api.py  test_state_store.py
tests/js/: logic.test.mjs  state.test.mjs
