[project]
name = "russian-loto"
version = "0.1.0"
description = "Russian Loto card generator for PDF and 3D printing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cadquery>=2.7.0",
    "click>=8.3.2",
    "pillow>=12.2.0",
]

[project.scripts]
loto = "russian_loto.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/russian_loto"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
