[project]
name = "russian-loto"
version = "0.1.0"
description = "Russian Loto card generator for PDF and 3D printing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["loto", "lottery", "cards", "3d-printing", "stl", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "cadquery>=2.7.0",
    "click>=8.3.2",
    "pillow>=12.2.0",
]

[project.scripts]
loto = "russian_loto.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/russian_loto"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
